bench02_lpm-trie-lookup: Adjust image/plot for large sizes
Disable the scientific 1e6 notation for the axis.

As documented in:
 https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.axes.Axes.ticklabel_format.html

Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>

--- a/areas/bench/bench02_lpm-trie-lookup.org
+++ b/areas/bench/bench02_lpm-trie-lookup.org
@@ -263,6 +263,7 @@ fig = plt.figure()
 
 axes1 = fig.add_subplot(1,1, 1)
 axes1.plot(nr, d_ns, marker='o', label='lookup nanosec/op')
+axes1.ticklabel_format(style="plain") # turns off scientific notation
 
 #axes2 = fig.add_subplot(1,1, 1)
 #axes2.plot(nr, d_miss_pct, marker='x', label='cache-misses %')
