bench02_lpm-trie-lookup: add grid to plots for readability
Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>

--- a/areas/bench/bench02_lpm-trie-lookup.org
+++ b/areas/bench/bench02_lpm-trie-lookup.org
@@ -264,6 +264,7 @@ fig = plt.figure()
 axes1 = fig.add_subplot(1,1, 1)
 axes1.plot(nr, d_ns, marker='o', label='lookup nanosec/op')
 axes1.ticklabel_format(style="plain") # turns off scientific notation
+axes1.grid(True)
 
 #axes2 = fig.add_subplot(1,1, 1)
 #axes2.plot(nr, d_miss_pct, marker='x', label='cache-misses %')
@@ -298,6 +299,8 @@ fig = plt.figure()
 
 axes1 = fig.add_subplot(1,1, 1)
 axes1.plot(nr, d_ns, marker='o', label='lookup nanosec/op')
+axes1.ticklabel_format(style="plain") # turns off scientific notation
+axes1.grid(True)
 
 #axes2 = fig.add_subplot(1,1, 1)
 #axes2.plot(nr, d_miss_pct, marker='x', label='cache-misses %')
@@ -331,6 +334,8 @@ fig = plt.figure()
 
 axes1 = fig.add_subplot(1,1, 1)
 axes1.plot(nr, d_ns, marker='o', label='lookup nanosec/op')
+axes1.ticklabel_format(style="plain") # turns off scientific notation
+axes1.grid(True)
 
 #axes2 = fig.add_subplot(1,1, 1)
 #axes2.plot(nr, d_miss_pct, marker='x', label='cache-misses %')
